Refactor RotationStep into ActionDef to make it readonly. Add a UniqueId to ActionDef to support future import/export.

--- a/RotationSimulator/MainWindow.xaml
+++ b/RotationSimulator/MainWindow.xaml
@@ -39,6 +39,7 @@
             </TabItem>
             <TabItem Header="Gear Editor">
                 <Grid Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <TextBlock>Coming soon, to a simulator near you!</TextBlock>
                 </Grid>
             </TabItem>
             <TabItem Header="Options">
