--- a/RotationSimulator/MainWindow.xaml
+++ b/RotationSimulator/MainWindow.xaml
@@ -93,7 +93,28 @@
             </TabItem>
             <TabItem Header="Gear Editor">
                 <Grid Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                    <TextBlock>Coming soon, to a simulator near you!</TextBlock>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <TextBlock  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,5,5,5">All of the below is in tenths of a percent (so 110 = 11.0%). This is a temporary hack.</TextBlock>
+                    <TextBlock  Grid.Row="1" Grid.Column="0" Margin="5,5,5,5">Critical Hit Rate</TextBlock>
+                    <TextBox x:Name="tb_critRate" Grid.Row="1" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">210</TextBox>
+                    <TextBlock  Grid.Row="2" Grid.Column="0" Margin="5,5,5,5">Critical Hit Bonus</TextBlock>
+                    <TextBox x:Name="tb_critBonus"  Grid.Row="2" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">560</TextBox>
+                    <TextBlock  Grid.Row="3" Grid.Column="0" Margin="5,5,5,5">Direct Hit Rate</TextBlock>
+                    <TextBox x:Name="tb_dhRate" Grid.Row="3" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">450</TextBox>
+                    <TextBlock  Grid.Row="4" Grid.Column="0" Margin="5,5,5,5">Determination Bonus</TextBlock>
+                    <TextBox x:Name="tb_detBonus" Grid.Row="4" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">86</TextBox>
                 </Grid>
             </TabItem>
             <TabItem Header="Options">
