--- a/RotationSimulator/MainWindow.xaml
+++ b/RotationSimulator/MainWindow.xaml
@@ -36,8 +36,9 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="42*"></ColumnDefinition>
+                        <ColumnDefinition Width="605*"/>
+                        <ColumnDefinition Width="648*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"></RowDefinition>
@@ -46,7 +47,7 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontSize="24">Rotations List</TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Center" FontSize="24">Rotations List</TextBlock>
                     <ScrollViewer VerticalScrollBarVisibility="Auto" MinWidth="100" Margin="5,5,5,5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
                         <ListBox x:Name="lb_rotationsList" MinWidth="100" Margin="5,5,5,5" SelectionChanged="lb_rotationsList_SelectionChanged">
                         </ListBox>
@@ -57,15 +58,15 @@
                     <Button Grid.Row="3" Grid.Column="1" Margin="5,5,5,5" Click="button_ExportRotation">Export...</Button>
                     <!--TODO: Need a duplicate button/option-->
 
-                    <StackPanel Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Orientation="Horizontal">
+                    <StackPanel Grid.Row="0" Grid.Column="3" HorizontalAlignment="Left" Orientation="Horizontal" Margin="214,0,0,0">
                         <Image Source="images/icons/icon_missing.png" ToolTip="JOB NAME HERE"></Image>
                         <TextBlock FontSize="24">Rotation</TextBlock>
                     </StackPanel>
-                    <TextBlock Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center" FontSize="24">Action Bank</TextBlock>
-                    <ScrollViewer VerticalScrollBarVisibility="Auto" MinWidth="100" Margin="5,5,5,5" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" AllowDrop="True" Drop="rotationPanel_Drop">
+                    <TextBlock Grid.Row="0" Grid.Column="4" HorizontalAlignment="Center" FontSize="24">Action Bank</TextBlock>
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" MinWidth="100" Margin="5,5,5,5" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" AllowDrop="True" Drop="rotationPanel_Drop" Grid.ColumnSpan="2">
                         <StackPanel x:Name="rotationPanel"/>
                     </ScrollViewer>
-                    <ScrollViewer VerticalScrollBarVisibility="Visible" Grid.Row="1" Grid.Column="3" Grid.RowSpan="3">
+                    <ScrollViewer VerticalScrollBarVisibility="Visible" Grid.Column="3" Grid.RowSpan="4" Grid.ColumnSpan="2" Margin="605,45,0,0">
                         <StackPanel x:Name="actionSetPanel" />
                     </ScrollViewer>
                 </Grid>
@@ -111,7 +112,9 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock  Grid.Row="0" Grid.Column="0" Margin="5,5,5,5">Simulate Trick Attack</TextBlock>
-                    <CheckBox x:Name="cb_opt_simulateTrickAttack" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" IsChecked="True"></CheckBox>
+                    <CheckBox x:Name="cb_opt_simulateTrickAttack" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="True"></CheckBox>
+                    <TextBlock  Grid.Row="1" Grid.Column="0" Margin="5,5,5,5" ToolTip="Put your estimated ping here. Animation locks are ping dependent, and this is used to adjust them. Default is 100. Values under 10 will be treated as 10.">Ping</TextBlock>
+                    <TextBox x:Name="tb_opt_ping" Grid.Row="1" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">100</TextBox>
                 </Grid>
             </TabItem>
         </TabControl>
