--- a/RotationSimulator/MainWindow.xaml
+++ b/RotationSimulator/MainWindow.xaml
@@ -91,6 +91,8 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
                     <TextBlock  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,5,5,5">All of the below is in tenths of a percent (so 110 = 11.0%). This is a temporary hack.</TextBlock>
@@ -102,6 +104,10 @@
                     <TextBox x:Name="tb_dhRate" Grid.Row="3" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">450</TextBox>
                     <TextBlock  Grid.Row="4" Grid.Column="0" Margin="5,5,5,5">Determination Bonus</TextBlock>
                     <TextBox x:Name="tb_detBonus" Grid.Row="4" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">86</TextBox>
+                    <TextBlock  Grid.Row="5" Grid.Column="0" Margin="5,5,5,5">Skill Speed</TextBlock>
+                    <TextBox x:Name="tb_skillspeed" Grid.Row="5" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">380</TextBox>
+                    <TextBlock  Grid.Row="6" Grid.Column="0" Margin="5,5,5,5">Spell Speed</TextBlock>
+                    <TextBox x:Name="tb_spellspeed" Grid.Row="6" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">380</TextBox>
                 </Grid>
             </TabItem>
             <TabItem Header="Options">
